// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Experience Styles renders the ExperienceContainer correctly 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
    background-color: ",
          "#0984E3",
          ";
    width: 100%;
    min-height: 95vh;
    font-family: Roboto, sans-serif;
    color: ",
          "#FFFFFF",
          ";
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 0px 4px 20px 0px rgba(0,0,0,0.75);
    transform: skewY(2deg);
    padding: 5vh 0;
    filter: url('data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\"><defs><filter id=\\"gaussian_blur\\"><feGaussianBlur in=\\"SourceGraphic\\" stdDeviation=\\"0\\" /></filter></defs></svg>#gaussian_blur');
",
        ],
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": "div",
      "toString": [Function],
      "usesTheme": false,
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`Experience Styles renders the ExperienceContent correctly 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bwzfXH",
        "isStatic": false,
        "rules": Array [
          "
    padding: 50px 10%;
    transform: skewY(-2deg);

    @media (min-width: 800px) {
        padding: 50px 25%;
    }
",
        ],
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bwzfXH",
      "target": "div",
      "toString": [Function],
      "usesTheme": false,
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`Experience Styles renders the ExperienceHeader correctly 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-htpNat",
        "isStatic": false,
        "rules": Array [
          "
    font-weight: normal;
    color: ",
          "#FFFFFF",
          ";
    text-align: center;
    margin: 0;
    font-size: 36pt;

    @media (min-width: 800px) {
        font-size: 48pt;
    }
",
        ],
      },
      "displayName": "styled.h2",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-htpNat",
      "target": "h2",
      "toString": [Function],
      "usesTheme": false,
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;
